fixed resume skill section setup to look okay on small screens too

--- a/style2.css
+++ b/style2.css
@@ -13,15 +13,6 @@ html {scroll-behavior: smooth;}
 .nav-item{margin-top:0;margin-bottom: 0;margin-left: 5px;background-color: black;width:100px;padding-left: 10px;}
 
 
-/* Setting up the margins on the resume exp cols */
-.left{margin-top:2%;}
-.right{margin-top:16.5%;}
-@media screen and (max-width:991px){
-    .left{margin-top:4.75%}
-    .right{margin-top:4.75%}
-}
-
-
 .bg-home,.bg-pub, .bg-res-edu,.bg-res-exp,.bg-res-pro,.bg-res-ski {
   /* The image used */ 
   /* Set a specific height */
@@ -43,7 +34,19 @@ html {scroll-behavior: smooth;}
 .bg-res-edu{min-height: 500px;background-image:url('pics/wellesley.png');}
 .bg-res-exp{min-height: 1600px;background-image:url('pics/summer2024.jpg')}
 .bg-res-pro{background-image:url('pics/code.png')}
-.bg-res-ski{min-height: 500px;background-image: url('pics/daphnid.jpeg');}
+.bg-res-ski{min-height: 550px;background-image: url('pics/daphnid.jpeg');}
+
+
+/* Setting up the margins on the resume exp cols */
+.left{margin-top:2%;}
+.right{margin-top:16.5%;}
+@media screen and (max-width:991px){
+    .left{margin-top:4.75%}
+    .right{margin-top:4.75%}
+    .bg-res-ski{min-height: 610px;}
+}
+
+
 
 .bg-cla-cs{background-image: url('pics/code.png');}
 
